[package]
name = "marathon-benchmark"
version = "0.1.0"
authors = ["Ivan Balaksha <tagantroy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "0.3", features = ["full"] }
mozdevice = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
async-trait = "0.1.42"
port_scanner = "0.1.5"
tryhard = "0.2.0"
indicatif = "0.15.0"
console = ">=0.9.1, <1.0.0"
uuid = "0.8.1"
serde_json = "1.0"
home = "0.5.3"
sysinfo = "0.16.1"